--- a/idex.html
+++ b/idex.html
@@ -19,6 +19,20 @@
             <button class="signup-btn">Inscription</button>
           </div>
         </div>
-      </nav>
+    </nav>
+    <!-- Section Terrain -->
+    <div class="main-container">
+        <div class="terrain-container">
+            <div class="terrain">
+                <div class="player-position" style="top: 10%; left: 50%;">1</div>
+                <div class="player-position" style="top: 30%; left: 20%;">2</div>
+                <div class="player-position" style="top: 30%; left: 80%;">3</div>
+                <!-- Ajoutez plus de positions si nécessaire -->
+            </div>
+        </div>
+        <!-- Ajoutez ici d'autres contenus si nécessaire -->
+    </div>
+    
+
 </body>
 </html>
