--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         class="hidden fixed inset-0  flex items-center justify-center z-50 bg-red-700 bg-opacity-50">
         <div class="relative p-5 shadow-xl rounded-lg bg-white w-full min-h-36 md:w-1/2 lg:w-1/3 lg:min-h-44">
             <span id="closeChoixPlayer"
-                class="absolute right-5 top-5 text-gray-700 cursor-pointer material-symbols-outlined">cancel</span>
+                class="absolute right-5 top-5 text-gray-700  hover:text-red-700 cursor-pointer material-symbols-outlined">cancel</span>
 
             <h2 class="text-xl font-bold mb-4 text-center">Choisir Un joueur </h2>
             <ul id="ulChoixPlayers" class="grid grid-cols-2">
